--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       build: ./
       image: survey-form-v2:latest
       restart: always
-      command: npm start && npm test
+      command: npm start
       volumes:
         - ./src:/var/www/app/src
         - ./package.json:/var/www/app/package.json
